# smart_rpc

./: .gitignore  LICENSE  Taskfile.yaml  pyproject.toml
docs/: annotations.md
smart_rpc/: client.py  constants.py  errors.py  examples.py  ifaces.py  message_hander.py  messages.py  rpc_annotation.py  schema.py  server.py  server_old.py  test.py  types.py  user.py  utils.py
